# openapi.json
@@ -111,7 +111,7 @@
           "System Control"
         ],
         "summary": "Run Terminal Command",
-        "description": "Runs a terminal command asynchronously to prevent timeouts.",
+        "description": "Runs a terminal command.",
         "operationId": "run_terminal_command_run_command_post",
         "requestBody": {
           "content": {
@@ -145,14 +145,14 @@
         }
       }
     },
-    "/run-long-command": {
+    "/start-process": {
       "post": {
         "tags": [
           "System Control"
         ],
-        "summary": "Run Long Terminal Command",
-        "description": "Starts a long-running command and returns a process ID.",
-        "operationId": "run_long_terminal_command_run_long_command_post",
+        "summary": "Start Process",
+        "description": "Starts a long-running process and returns a process ID.",
+        "operationId": "start_process_start_process_post",
         "requestBody": {
           "content": {
             "application/json": {
@@ -185,14 +185,14 @@
         }
       }
     },
-    "/check-command-status/{process_id}": {
+    "/stop-process/{process_id}": {
       "post": {
         "tags": [
           "System Control"
         ],
-        "summary": "Check Command Status",
-        "description": "Checks the status of a running command.",
-        "operationId": "check_command_status_check_command_status__process_id__post",
+        "summary": "Stop Process",
+        "description": "Stops a running process given its process ID.",
+        "operationId": "stop_process_stop_process__process_id__post",
         "parameters": [
           {
             "name": "process_id",
@@ -220,6 +220,67 @@
                 "schema": {
                   "$ref": "#/components/schemas/HTTPValidationError"
                 }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/check-process-status/{process_id}": {
+      "post": {
+        "tags": [
+          "System Control"
+        ],
+        "summary": "Check Process Status",
+        "description": "Checks the status of a running process and returns live output.",
+        "operationId": "check_process_status_check_process_status__process_id__post",
+        "parameters": [
+          {
+            "name": "process_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Process Id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/list-running-processes": {
+      "post": {
+        "tags": [
+          "System Control"
+        ],
+        "summary": "List Processes",
+        "description": "Lists running processes on the system.",
+        "operationId": "list_processes_list_running_processes_post",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
               }
             }
           }
@@ -312,6 +373,7 @@
           "Read/Write Files"
         ],
         "summary": "Replace Function",
+        "description": "Replaces a function definition in a Python file with a new one.",
         "operationId": "replace_function_replace_function_post",
         "requestBody": {
           "content": {
@@ -345,12 +407,53 @@
         }
       }
     },
+    "/replace-text": {
+      "post": {
+        "tags": [
+          "Read/Write Files"
+        ],
+        "summary": "Replace Text",
+        "description": "Replaces original text with upadted text within in a specified file.",
+        "operationId": "replace_text_replace_text_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ReplaceTextRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/read-file": {
       "post": {
         "tags": [
           "Read/Write Files"
         ],
         "summary": "Get File",
+        "description": "Reads the content of a file at the specified path.",
         "operationId": "get_file_read_file_post",
         "requestBody": {
           "content": {
@@ -390,6 +493,7 @@
           "Read/Write Files"
         ],
         "summary": "Write File",
+        "description": "Overwrites the file at the specified path with the given content.",
         "operationId": "write_file_write_file_post",
         "requestBody": {
           "content": {
@@ -429,6 +533,7 @@
           "Read/Write Files"
         ],
         "summary": "Append File",
+        "description": "Appends content to the end of the file at the specified path.",
         "operationId": "append_file_append_file_post",
         "requestBody": {
           "content": {
@@ -468,6 +573,7 @@
           "Read/Write Files"
         ],
         "summary": "Read Lines",
+        "description": "Reads a specified number of lines from a file starting at a given line.",
         "operationId": "read_lines_read_lines_post",
         "requestBody": {
           "content": {
@@ -569,26 +675,6 @@
         "summary": "Get Host Resources",
         "description": "Returns system resource usage (CPU, RAM, Disk).",
         "operationId": "get_host_resources_host_resources_post",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          }
-        }
-      }
-    },
-    "/list-running-processes": {
-      "post": {
-        "tags": [
-          "System Information"
-        ],
-        "summary": "List Processes",
-        "description": "Lists running processes on the system.",
-        "operationId": "list_processes_list_running_processes_post",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -850,6 +936,29 @@
           "new_function_code"
         ],
         "title": "ReplaceFunctionRequest"
+      },
+      "ReplaceTextRequest": {
+        "properties": {
+          "filepath": {
+            "type": "string",
+            "title": "Filepath"
+          },
+          "original_text": {
+            "type": "string",
+            "title": "Original Text"
+          },
+          "replacement_text": {
+            "type": "string",
+            "title": "Replacement Text"
+          }
+        },
+        "type": "object",
+        "required": [
+          "filepath",
+          "original_text",
+          "replacement_text"
+        ],
+        "title": "ReplaceTextRequest"
       },
       "ValidationError": {
         "properties": {
